--- a/EDTA_2.2.x.yml
+++ b/EDTA_2.2.x.yml
@@ -2,6 +2,7 @@ name: EDTA2
 channels:
   - conda-forge
   - bioconda
+  - etetoolkit
   - defaults
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
@@ -360,3 +361,14 @@ dependencies:
   - zipp=3.17.0=pyhd8ed1ab_0
   - zlib=1.2.13=hd590300_5
   - zstd=1.5.5=hfc55251_0
+  - pip:
+      - bio==1.6.2
+      - biobear==0.14.1
+      - biothings-client==0.3.1
+      - gprofiler-official==1.0.0
+      - mygene==3.2.2
+      - platformdirs==4.1.0
+      - polars==0.20.5
+      - pooch==1.8.0
+      - pyarrow==15.0.0
+prefix: /home/joseph/.local/share/mise/installs/python/mambaforge/envs/EDTA2
