--- a/docs/_quarto.yml
+++ b/docs/_quarto.yml
@@ -1,6 +1,6 @@
 project:
   type: website
-  output-dir: "docs"
+  output-dir: "../docs_publish"
 
 website:
   title: "EDTA: Nextflow Documentation"
