--- a/nextflow.config
+++ b/nextflow.config
@@ -1,2 +1,12 @@
-conda.createTimeout = '1h'
-nextflow.enable.moduleBinaries = true
+includeConfig './conf/base.config'
+
+conda.createTimeout     = '1h' // base+
+
+params.outdir           = './results'
+params.publish_dir_mode = 'copy'
+params.max_cpus         = 8
+params.max_memory       = 16.GB
+params.max_time         = 4.h
+
+includeConfig './conf/modules.config'
+includeConfig './conf/reporting_defaults.config'
