Implemented postprocess_ltrretriever

--- a/conf/base.config
+++ b/conf/base.config
@@ -124,6 +124,9 @@ nextflow {
     }
 }
 
+// Capture exit codes from upstream processes when piping
+process.shell                   = ['/bin/bash', '-euo', 'pipefail']
+
 def check_max(obj, type) {
     if (type == 'memory') {
         try {
