Added default args for LTRHARVEST

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -17,6 +17,8 @@ process {
 
     withName: LTRHARVEST {
         ext.prefix = { "${meta.id}_ltrharvest" }
+
+        ext.args = '-size 1000000 -time 300'
     }
 
     withName: LTRFINDER {
