Integrated fasta_ltrretriever sub-workflow

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -29,3 +29,9 @@ process {
         ext.prefix = { "${meta.id}_ltrharvest_ltrfinder.tabout" }
     }
 }
+
+process {
+    withName: REPEATMODELER_REPEATMODELER {
+        ext.args = '-engine ncbi'
+    }
+}
