--- a/modules/pfr/repeatmodeler/repeatmodeler/environment.yml
+++ b/modules/pfr/repeatmodeler/repeatmodeler/environment.yml
@@ -1,10 +1,9 @@
+---
 # yaml-language-server: $schema=https://raw.githubusercontent.com/nf-core/modules/master/modules/environment-schema.json
-name: "edta_components"
+name: "repeatmodeler_repeatmodeler"
 channels:
   - conda-forge
   - bioconda
   - defaults
 dependencies:
-  - "bioconda::trf"
-  - "bioconda::mdust==2006.10.17-6"
-  - "bioconda::tesorter"
+  - "bioconda::repeatmodeler=2.0.5"
