Incorporated fasta_annosine

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -35,3 +35,18 @@ process {
         ext.args = '-engine ncbi'
     }
 }
+
+process {
+    // TODO: Use EDTA defaults. These params are for testing only
+    withName: ANNOSINE {
+        ext.args = '-a 2 --num_alignments 50000 -rpm 0 --copy_number 1 --shift 200 -auto 1'
+    }
+
+    withName: ANNOSINE_TESORTER {
+        ext.args = '--disable-pass2'
+    }
+
+    withName: ANNOSINE_CLEANUP_TANDEM {
+        ext.args = '-misschar N -nc 50000 -nr 0.8 -minlen 80 -minscore 3000 -trf 1 -cleanN 1 -cleanT 1'
+    }
+}
