--- a/conf/test.config
+++ b/conf/test.config
@@ -1,8 +1,11 @@
+process {
+    resourceLimits = [
+        cpus: 4,
+        memory: '15.GB',
+        time: '1.h'
+    ]
+}
+
 params {
     genomes     = 'https://raw.githubusercontent.com/nf-core/test-datasets/modules/data/genomics/sarscov2/genome/genome.fasta'
-    // TODO: Replace with a larger genome as LTRHARVEST does not detect any LTRs on this one
-
-    max_cpus    = 2
-    max_memory  = '6.GB'
-    max_time    = '1.hour'
 }
