--- a/conf/modules.config
+++ b/conf/modules.config
@@ -1,22 +1,22 @@
 process {
-    withName: 'LTRHARVEST' {
+    withName: 'EDTA:LTRHARVEST' {
         ext.args = '-size 1000000 -time 300'
         ext.prefix = { "${meta.id}_ltrharvest" }
     }
     
-    withName: 'LTRFINDER' {
+    withName: 'EDTA:LTRFINDER' {
         ext.args = '-harvest_out -size 1000000 -time 300'
     }
 
-    withName: 'CAT_CAT' {
+    withName: 'EDTA:CAT_CAT' {
         ext.prefix = { "${meta.id}_ltrharvest_ltrfinder.tabout" }
     }
     
-    withName: 'ANNOSINE' {
+    withName: 'EDTA:ANNOSINE' {
         ext.args = '--num_alignments 50000 -rpm 0 --copy_number 3 --shift 100 -auto 1'
     }
 
-    withName: 'REPEATMODELER_REPEATMODELER' {
+    withName: 'EDTA:REPEATMODELER_REPEATMODELER' {
         ext.args = '-engine ncbi'
     }
     
