--- a/nextflow.config
+++ b/nextflow.config
@@ -92,8 +92,10 @@ conda {
 
 manifest {
     name                        = 'jguhlin/EDTA'
-    nextflowVersion             = '!>=23.04.0'
+    description                 = 'Extensive de-novo TE Annotator on Nextflow'
+    manifest.author             = 'Usman Rashid, Joseph Guhlin & Shujun Ou'
     version                     = '0.1.0dev'
+    nextflowVersion             = '!>=23.04.0'
 }
 
 includeConfig 'conf/modules.config'
